  removed in LUCENE-9576. (ab)

* SOLR-14957: Add Prometheus Exporter to docker PATH. Fix classpath issues. (Houston Putman)

* SOLR-14912: Clean up solr-extraction contrib to produce solr-extraction-* jar
  (instead of solr-cell-*). (Dawid Weiss)

* SOLR-14978: Enable OOM Killer Script in Solr Foreground. Simplify getting heap dumps on OOM. (Mike Drob, Houston Putman)

Bug Fixes
---------------------
* SOLR-14546: Fix for a relatively hard to hit issue in OverseerTaskProcessor that could lead to out of order execution
  of Collection API tasks competing for a lock (Ilan Ginzburg).

==================  8.8.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------

* SOLR-14907: Add v2 API for configSet upload, including single-file insertion. (Houston Putman)

Improvements
---------------------
* SOLR-14942: Reduce leader election time on node shutdown by removing election nodes before closing cores.
  (Cao Manh Dat, Mike Drob, hossman, shalin)

* SOLR-14955: Add env var options for the Prometheus Exporter bin scripts (Houston Putman)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
* SOLR-14946: Fix responseHeader being returned in response when omitHeader=true and EmbeddedSolrServer is used
  as the client (Munendra S N)

* SOLR-14940: ReplicationHandler memory leak through SolrCore.closeHooks with unstable ZK connection. (Anver Sotnikov, Mike Drob)

* SOLR-14969: Prevent creating multiple cores with the same name which leads to instabilities (race condition)
  (Erick Erickson, Andreas Hubold)

* SOLR-14961: Fix for deleting zookeeper nodes with same path length. Only the first zk-node was removed. (Michael Aleythe via Mike Drob)

Other Changes
---------------------

* SOLR-14954: Heavily edit reindexing.adoc (Sameul García Martínez and Erick Erickson)

==================  8.7.0 ==================
